k8s-config/app-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: client-ingress
# spec:
#   rules:
#     - host: localhost
#     - http:
#         paths:
#           - path: /
#             pathType: Exact
#             backend:
#               service:
#                 name: client-service
#                 port:
#                   number: 80
# # ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
spec:
  rules:
    - host: localhost
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: server-service
                port:
                  number: 4000
